apps/jellyfin/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.doink.co.za`)
      services:
        - name: jellyfin
          port: 8096
  tls:
    secretName: jellyfin-tls
